# cn-xyz_skopeo-ctl

./: Dockerfile  README.md  action.yml  entrypoint.sh  requirements.txt  setup.cfg  setup.py
skopeoctl/: __init__.py  bash.py  constants.py  exception.py  http.py  logger.py  render.py  shell.py  skopeo.py  utils.py  version.py
skopeoctl/api/: __init__.py  docker.py  gcr.py  quay.py
skopeoctl/template/: README.md
skopeoctl/tests/unit/: test_http.py  test_shell.py  test_skopeo.py  test_utils.py
skopeoctl/tests/unit/api/: test_docker.py  test_gcr.py
