[metadata]
name = skopeo-ctl
summary = Container Images Sync Client
description_file =
    README.md
author = admin
author_email = admin@china.cn
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/cn-xyz/skopeo-ctl/issues
    Source Code = https://github.com/cn-xyz/skopeo-ctl
python-requires = >=3.6
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    skopeoctl
data_files =

[entry_points]
console_scripts =
    skopeoctl = skopeoctl.shell:main

[extras]
skopeo =
    skopeo>=1.3.0
